--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
-    "irc": "0.4.1"
+    "irc": "0.4.1",
+    "cheerio": "0.20.0"
   },
   "devDependencies": {
     "jshint": "*",
