Rename to irc-butler
Yay, that name again. Since dcc is not supported (yet?), for now drop
the idea of it being an actual file server. This can still be done at a
later time as a plugin.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "irc-file-server",
+  "name": "irc-butler",
   "version": "0.0.1",
-  "description": "Allow IRC users to look for files you serve and download them off you via DCC.",
+  "description": "IRC bot",
   "main": "main.js",
   "scripts": {
-    "doc": "./node_modules/.bin/jsdoc --destination ./documentation *.js",
+    "doc": "./node_modules/.bin/jsdoc --package ./package.json --readme ./README.md --destination ./documentation *.js",
     "test": "./node_modules/jshint/bin/jshint && ./node_modules/jscs/bin/jscs --preset=google *.js"
   },
   "author": {
