--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "GPL-3.0",
   "dependencies": {
     "irc": "0.4.1",
-    "cheerio": "0.20.0"
+    "cheerio": "0.20.0",
+    "mathjs": "2.7.0"
   },
   "devDependencies": {
     "jscs": "*",
