Move TODO comments to bug reporter
Also make ESLint look for them and warn about them. Remove JSHint
dependency since ESLint does everything it does anyway, I believe.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "doc": "./node_modules/.bin/jsdoc --package ./package.json --readme ./README.md --destination ./documentation *.js plugins/*.js",
-    "test": "./node_modules/.bin/eslint *.js && ./node_modules/.bin/jshint && ./node_modules/.bin/jscs --preset=google *.js"
+    "test": "./node_modules/.bin/eslint *.js plugins/*.js && ./node_modules/.bin/jscs --preset=google *.js plugins/*.js"
   },
   "author": {
     "name": "Ward Muylaert",
@@ -21,7 +21,6 @@
   "devDependencies": {
     "jscs": "*",
     "jsdoc": "*",
-    "jshint": "*",
     "eslint": "*"
   }
 }
