--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,13 @@
         // Allow unused arg if starts with _
         "argsIgnorePattern": "^_"
       }
+    ],
+    "no-warning-comments": [
+      1,
+      {
+        "terms": ["todo", "fixme"],
+        "location": "anywhere"
+      }
     ]
   }
 }
