ESLint semicolons and unreachables

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
         "terms": ["todo", "fixme"],
         "location": "anywhere"
       }
-    ]
+    ],
+    "semi": [2, "always"],
+    "no-unreachable": 2
   }
 }
