--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cheerio": "0.20.0",
     "config": "1.19.0",
     "irc": "0.5.0",
-    "mathjs": "3.0.0"
+    "mathjs": "3.0.0",
+    "twitter-node-client": "0.0.6"
   },
   "devDependencies": {
     "jsdoc": "*",
