--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "config": "1.19.0",
     "irc": "0.5.0",
     "mathjs": "3.0.0",
-    "twitter-node-client": "0.0.6"
+    "twitter-node-client": "0.0.6",
+    "request": "2.75.0"
   },
   "devDependencies": {
     "jsdoc": "*",
