--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "irc-butler",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "IRC bot",
   "main": "main.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "author": {
     "name": "Ward Muylaert",
     "email": "ward.muylaert@gmail.com",
-    "url": "http://wardje.eu/"
+    "url": "http://blog.wxm.be/"
   },
   "license": "GPL-3.0",
   "dependencies": {
