--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cheerio": "0.22.0",
     "config": "1.24.0",
+    "fuzzy": "0.1.3",
     "irc": "0.5.2",
     "mathjs": "3.8.1",
     "twitter-node-client": "0.0.6",
