Improve tweet handling
- Update plugin to a maintained one
- Decode html entities with 'he'

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "fuzzy": "0.1.3",
     "irc": "0.5.2",
     "mathjs": "3.8.1",
-    "twitter-node-client": "0.0.6",
-    "request": "2.79.0"
+    "twitter": "1.7.1",
+    "request": "2.79.0",
+    "he": "1.1.1"
   },
   "devDependencies": {
     "jsdoc": "*",
