--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   "license": "GPL-3.0",
   "dependencies": {
     "cheerio": "0.22.0",
-    "config": "1.29.0",
+    "config": "1.31.0",
     "fuzzy": "0.1.3",
     "irc": "0.5.2",
-    "mathjs": "3.18.1",
+    "mathjs": "3.20.2",
     "twitter": "1.7.1",
-    "request": "2.83.0",
-    "he": "1.1.1"
+    "request": "2.88.0",
+    "he": "1.2.0"
   },
   "devDependencies": {
-    "eslint": "^4.14.0",
-    "jsdoc": "*"
+    "eslint": "^5.13.0",
+    "jsdoc": "^3.5.5"
   }
 }
