--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cheerio": "0.22.0",
     "config": "1.31.0",
     "fuzzy": "0.1.3",
-    "irc": "0.5.2",
+    "irc-upd": "0.10.0",
     "mathjs": "3.20.2",
     "twitter": "1.7.1",
     "request": "2.88.0",
