--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   "license": "GPL-3.0",
   "dependencies": {
     "cheerio": "0.22.0",
-    "config": "1.31.0",
+    "config": "^1.31.0",
     "fuzzy": "0.1.3",
+    "he": "1.2.0",
     "irc-upd": "0.10.0",
     "mathjs": "3.20.2",
-    "twitter": "1.7.1",
-    "request": "2.88.0",
-    "he": "1.2.0"
+    "request": "^2.88.2",
+    "twitter": "1.7.1"
   },
   "devDependencies": {
-    "eslint": "^5.13.0",
-    "jsdoc": "^3.5.5"
+    "eslint": "^7.11.0",
+    "jsdoc": "^3.6.6"
   }
 }
